--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <head>
 <script>
 function browserRedirect() {
     var sUserAgent = navigator.userAgent.toLowerCase();
@@ -18,6 +19,8 @@ function browserRedirect() {
 }
 browserRedirect();
 </script>
+        </head>
 <body>
+    holle wrodl !
 </body>
 </html>
